feat: cambios en entidades y services

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DOMAIN_BACKEND=https://backend.com
 
 DB_TYPE=mysql
 DB_HOST=localhost
-DB_DATABASE=storeWeb
+DB_DATABASE=application
 DB_PORT=3308
 DB_USERNAME=root
 DB_PASSWORD=root
