feat: implement swagger and change variables

--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ DOMAIN_BACKEND=https://backend.com
 
 DB_TYPE=mysql
 DB_HOST=localhost
-DB_DATABASE=application
-DB_PORT=3308
+DB_DATABASE=security
+DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=Simonsito123
 
 JWT_ACCESS_TOKEN_SECRET=secretkey
 JWT_ACCESS_TOKEN_EXPIRATION_TIME=14400
